--- a/survey.html
+++ b/survey.html
@@ -113,9 +113,10 @@
             <div id ="inputVisibility">
                 <p id="step1Text">1) Please write the onomatopoeia you are thinking of:</p>
 
-                <label id="onomatopoeiaLabel" for="onomatopoeiaInput">Onomatopoeia:</label>
-                <br/>
-                <textarea id="onomatopoeiaInput" name="onomatopoeiaInput" placeholder="Write your onomatopoeia"></textarea>
+                <div class="input-group">
+                    <label id="onomatopoeiaLabel" for="onomatopoeiaInput">Onomatopoeia:</label>
+                    <textarea id="onomatopoeiaInput" name="onomatopoeiaInput" placeholder="Write your onomatopoeia"></textarea>
+                </div>
 
                 <p id="step2Text">2) Place the cursor of the video player at where the movement that corresponds to the onomatopoeia begins and press the "Get starting time" button</p>
                 <button id="getStart" class="button">Get starting time</button>
