--- a/index.html
+++ b/index.html
@@ -104,15 +104,7 @@
     </div>
 
     
-    <script src="./js/languageManager.js"></script>
-    <script src="./js/utils.js"></script>
-    <script src="./js/googleApi.js"></script>
-    <script src="./js/googleSheetsService.js"></script>
-    <script src="./js/baseApp.js"></script>
-    <script src="./js/uiManager.js"></script>
-    <script src="./js/loadingManager.js"></script>
-    <script src="./js/modalManager.js"></script>
-    <script src="./js/indexApp.js"></script>
+    <script type="module" src="./js/indexApp.js"></script>
     
 </body>
 </html>
