--- a/survey.html
+++ b/survey.html
@@ -167,17 +167,7 @@
         </div>
     </div>
 
-    <script src="./js/languageManager.js"></script>
-    <script src="./js/utils.js"></script>
-    <script src="./js/googleApi.js"></script>
-    <script src="./js/googleSheetsService.js"></script>
-    <script src="./js/baseApp.js"></script>
-    <script src="./js/uiManager.js"></script>
-    <script src="./js/loadingManager.js"></script>
-    <script src="./js/modalManager.js"></script>
-    <script src="./js/videoManager.js"></script>
-    <script src="./js/audioRecordingService.js"></script>
-    <script src="./js/surveyApp.js"></script>
+    <script type="module" src="./js/surveyApp.js"></script>
 
         
     
