--- a/tutorial.html
+++ b/tutorial.html
@@ -166,18 +166,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/languageManager.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/googleApi.js"></script>
-    <script src="js/googleSheetsService.js"></script>
-    <script src="js/baseApp.js"></script>
-    <script src="js/uiManager.js"></script>
-    <script src="js/loadingManager.js"></script>
-    <script src="js/modalManager.js"></script>
-    <script src="js/tutorialStepManager.js"></script>
-    <script src="js/bubblePositioner.js"></script>
-    <script src="js/videoManager.js"></script>
-    <script src="js/audioRecordingService.js"></script>
-    <script src="js/tutorialApp.js"></script>
+    <script type="module" src="js/tutorialApp.js"></script>
 </body>
 </html>
