list language bug fix

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 </p>
                 
                 <h3 id="instructionsTitle" data-lang="instructions.title">What you'll do:</h3>
-                <ul id="instructionsList">
-                    <li>Loading...</li>
-                </ul>
+                <ul id="instructionsList" data-lang-list="instructions.steps"></ul>
 
                 <p id="noOnomatopoeia" data-lang="additional_info.no_onomatopoeia">Loading...</p>
                 
