intro text update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movement to Onomatopoeia - Participant Login</title>
+    <title data-lang="page.title">Movement to Onomatopoeia - Participant Login</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
@@ -44,11 +44,8 @@
                 
                 <h3 id="instructionsTitle" data-lang="instructions.title">What you'll do:</h3>
                 <ul id="instructionsList" data-lang-list="instructions.steps"></ul>
-
-                <p id="noOnomatopoeia" data-lang="additional_info.no_onomatopoeia">Loading...</p>
                 
                 <p>
-                    <span id="aboutOnomatopoeia" data-lang="additional_info.about_onomatopoeia">Loading...</span>
                     <strong id="intuitionEmphasis" data-lang="additional_info.intuition_emphasis">Loading...</strong>
                 </p>
             </div>
