--- a/survey.html
+++ b/survey.html
@@ -87,7 +87,7 @@
         <div class="input-group">
 
             <label id="emotionLabel" for="emotionSelect" data-lang="survey.emotion_label">Emotion:</label>
-            <select id="emotionSelect" name="emotionSelect" class="emotion-dropdown">
+            <select id="emotionSelect" name="emotionSelect" class="emotion-dropdown" required>
                 <option value="" data-lang="survey.emotion_placeholder">Select an emotion</option>
                 <option value="joy" data-lang="survey.emotion_options.joy">Joy</option>
                 <option value="sadness" data-lang="survey.emotion_options.sadness">Sadness</option>
